- added SCIPaddBilinearIneqQuadratic to propose an inequality with two variables that appear in a bilinear term
- added SCIPcomputeBilinEnvelope{1,2} to compute a linearization of a bilinear term when considering at most two linear inequalities
- new method SCIPaddRow() to replace deprecated SCIPaddCut()

performance improvements:
- use disjoint set to reduce peak memory usage and time to compute of clique table connectedness information
- add and use RESTRICT macro for some pointers
- improved the implementation of SCIPvarGetActiveRepresentatives
- removed bestrelaxsol and directly access relaxation solution instead to decrease overhead when using relaxation handlers
- use LP solution polishing during probing and diving mode to activate it during many primal heuristics; remains disabled
  during strong branching and OBBT

fixed bugs:
- fix linear knapsack relaxation during separation if a binary variable does not have a solution value in [0,1].
- fixed bug in feasibility pump heuristic when switching on the usefp20 parameter
- fixed potential ressource leaks in SCIPsolveLinearProb, expr.c, sepa_eccuts, cons_cumulative.c, cons_nonlinear.c
- fixed order of SCIPcalcCliquePartition in corner case where no cliques are available
- fixed bug in mps reader. Reader now prints OBJSENSE section and tries to generate unique names of constraints
- fixed handling of LOOSE variables in locks heuristic

misc:
- dropped support for MOSEK < 7.0.0.0

Makefile:
- default value for ZIMPL is now "false"
- new flag DEBUGSOL={true,false} to enable checks against a user given debug solution

SCIP version 4.0.1
==================

interface:
- add function SCIPsetSlackVarUb() to control upper bound of slack variable in cons_indicator
- SCIPheurPassIndicator has a new parameter which allows to pass the objective of the solution

parameters:
- new paramter "constraints/indicator/maxsepanonviolated" to stop separation after separation of non violated cuts

features